<resources>
    <string name="app_name">GeoCall</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPassword">"Forgot Password?"</string>
    <string name="NewUser">"New User"</string>
    <string name="confirm_prompt">Please confirm your country code \n and enter your phone number.</string>
    <string name="t_and_c">By signing up you agree to our \n <b> Terms and Conditions </b></string>

    <string name="termsandconditions">Last updated September 23, 2020 \n\n<b>AGREEMENT TO TERMS</b> \n\nThese Terms and Conditions constitute a legally binding agreement made between you,
        whether personally or on behalf of an entity and GeoCall Inc., concerning your access to and use of our mobile application GeoCall. You agree that by accessing the Application,
        you have read, understood, and agree to be bound by all of these Terms and Conditions Use. IF YOU DO NOT AGREE WITH ALL OF THESE TERMS AND CONDITIONS, THEN YOU ARE EXPRESSLY
        PROHIBITED FROM USING THE APPLICATION AND YOU MUST DISCONTINUE USE IMMEDIATELY.
        \n\nSupplemental terms and conditions or documents that may be posted on GeoCall from time to time are hereby expressly incorporated herein by reference. We reserve the right,
        in our sole discretion, to make changes or modifications to these Terms and Conditions at any time and for any reason. We will alert you about any changes by updating the “Last
        updated” date of these Terms and Conditions and you waive any right to receive specific notice of each such change. It is your responsibility to periodically review these Terms
        and Conditions to stay informed of updates. You will be subject to, and will be deemed to have been made aware of and to have accepted, the changes in any revised Terms and
        Conditions by your continued use of GeoCall after the date such revised Terms are posted.
        \n\nThe information provided on GeoCall is not intended for distribution to or use by any person or entity in any jurisdiction or country where such distribution or use would be
        contrary to law or regulation or which would subject us to any registration requirement within such jurisdiction or country. Accordingly, those persons who choose to access the
        Application from other locations do so on their own initiative and are solely responsible for compliance with local laws, if and to the extent local laws are applicable.
        \n\nOption 1: GeoCall is intended for users of all ages. Persons can only register once under this application.
        \n\nOption 2: GeoCall is intended for users who are at least 10 years of age. All users who are minors in the jurisdiction in which they reside (generally under the age of 18)
        must have the permission of, and be directly supervised by, their parent or guardian to use GeoCall. If you are a minor, you must have your parent or guardian read and agree
        to these Terms of Use prior to you using the Application.</string>

    <string name="agree"><b>I Agree</b> to the \nTerms and Conditions</string>
    <string name="defaultDesc"><b>DEFAULT</b>\nuses GeoCall\'s default 0–9 arrangement for emergency numbers</string>
    <string name="advDesc"><b>ADVANCED</b>\ncustomize your priority emergency numbers and even add your own emergency contact</string>
    <string name="onboarding_image">onboarding image 1</string>
    <string name="crime">CRIME</string>
    <string name="police">POLICE</string>
    <string name="fire">FIRE</string>
    <string name="natural_disaster">NATURAL DISASTER</string>
    <string name="todo">TODO</string>
    <string name="welcome_back_user">Welcome back, User!</string>
    <string name="select_your_emergency">SELECT YOUR EMERGENCY</string>
    <string name="medical">MEDICAL</string>
    <string name="pregnancy">PREGNANCY</string>
    <string name="direction">DIRECTION</string>
    <string name="frag_homepage">NEARBY PLACES</string>
    <string name="suicide">suicide</string>
    <string name="child_abuse">CHILD\nABUSE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="which_setting">Which setting would you like?</string>
    <string name="dont_worry">Don\'t worry about your choice, \nyou can change these settings later on.</string>
    <string name="im_ready">I\'m ready</string>
    <string name="dial_icon">dial icon</string>
    <string name="dial_nearest_icon">dial nearest icon</string>
    <string name="press_to_dial">Press to dial nearest station to you</string>
    <string name="homepage_menu_button">homepage menu button</string>
    <string name="title_activity_maps">Map</string>
    <string name="got_it">Got it, thanks!</string>

</resources>