<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".CustomizationPage">

    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="98dp"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:contentDescription="geocall logo"
        android:src="@drawable/geocall_embossedtxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/modecotrial_bold"
        android:text="@string/which_setting"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/defaultsetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/modecotrial_regular"
            android:text="@string/defaultDesc"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/advancedsetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/modecotrial_regular"
            android:text="@string/advDesc"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/modecotrial_regular"
        android:text="@string/dont_worry"
        android:textAlignment="center"
        android:textColor="@color/hintGray"
        android:textSize="14sp" />

    <!--this should lead to the Welcome page-->
    <Button
        android:id="@+id/btn_ready"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius_gold"
        android:fontFamily="@font/modecotrial_regular"
        android:text="@string/im_ready" />
</LinearLayout>